--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,8 @@
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 7px;
     grid-template-areas: "nav nav nav nav" "header header header header" "main main main main" "footer footer footer footer"; }
+    .contenedor__grid--galeria .w-100 {
+      height: 400px; }
   .contenedor__grid--tour {
     display: grid;
     width: 100%;
@@ -140,6 +142,8 @@
   .contenedor__grid--galeria {
     grid-template-columns: repeat(4, 1fr);
     grid-template-areas: "nav nav nav nav" "header header header header" "main main main main" "footer footer footer footer"; }
+    .contenedor__grid--galeria .w-100 {
+      height: 500px; }
   .contenedor__grid--disco {
     grid-template-columns: repeat(3, 1fr);
     grid-template-areas: "nav nav nav" "header header header" "main main main" "footer footer footer footer"; } }
@@ -593,5 +597,5 @@ table {
   padding: 1rem; }
 
 .w-100 {
-  height: 500px;
+  height: 300px;
   object-fit: cover; }
