--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -105,7 +105,8 @@
 			grid-template-areas:
 			"nav nav nav nav" "header header header header"
 			"main main main main" "footer footer footer footer";	
-			
+			.w-100 {
+			height: 400px;}
 		}
 		
 		//TOUR//
@@ -166,7 +167,8 @@
 				"header header header header"
 				"main main main main"
 				"footer footer footer footer";
-
+					.w-100 {
+			height: 500px;}
 			}
 			
 		//discografia//
