arreglo de sobrante de pantalla tour

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -5,6 +5,7 @@ footer {
 	font-size: 3.5rem;
 	font-weight:100 ; 
 	background-color: $color__nav_footer;
+	width: 100%;
 
 	h5 { font-size: $letra__chica;
 		color: $color__blanco;
