--- a/css/style.css
+++ b/css/style.css
@@ -52,20 +52,22 @@
     grid-template-columns: repeat(1, 1fr);
     grid-gap: 0;
     grid-template-areas: "nav" "header" "main" "footer"; }
+    .contenedor__grid--tour h1 {
+      padding-top: 3rem; }
   .contenedor__grid--contactos {
     display: grid;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     grid-template-columns: repeat(1, 1fr);
     grid-gap: 0;
-    grid-template-areas: "nav" "header" "main" "aside" "footer";
-    background-color: black; }
+    grid-template-areas: "nav" "header" "main" "aside" "footer"; }
   #form {
     display: flex !important;
-    margin-top: 0;
+    margin-top: 20px;
+    margin-bottom: 20px;
     flex-direction: column;
     justify-content: center;
-    width: 80%; } }
+    width: 90%; } }
 
 /*media queries 768 HOME*/
 @media (min-width: 768px) {
@@ -121,21 +123,25 @@
       margin: 4rem; }
   .contenedor__grid--contactos {
     display: grid;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 7px;
-    grid-template-areas: "nav nav "  "header header"  "main main"  "aside aside" "footer footer"; } }
+    grid-template-areas: "nav nav "  "header header"  "main main"  "aside aside" "footer footer"; }
+    .contenedor__grid--contactos #form {
+      width: 80vw; } }
 
 /*media queries 1024 HOME*/
 @media (min-width: 1024px) {
   .contenedor__grid--contactos {
     display: grid;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 9px;
     grid-template-areas: "nav nav" "header header" "main aside" "footer footer"; }
+    .contenedor__grid--contactos #form {
+      width: 45vw; }
   .contenedor__grid--tour {
     grid-template-areas: "nav nav " "main header"  "footer footer";
     grid-gap: 5px; }
@@ -290,7 +296,8 @@ footer {
   font-family: "Varela Round", sans-serif;
   font-size: 3.5rem;
   font-weight: 100;
-  background-color: rgba(48, 57, 79, 0.8); }
+  background-color: rgba(48, 57, 79, 0.8);
+  width: 100%; }
   footer h5 {
     font-size: 1.2rem;
     color: #D9DBDE;
@@ -315,9 +322,10 @@ html {
   font-size: 62.5%; }
 
 body {
-  min-height: 100%;
+  width: 100vw;
+  height: 100%;
   background-size: cover;
-  background-color: #1f2124;
+  background-color: black;
   background-attachment: fixed; }
 
 p {
@@ -325,11 +333,17 @@ p {
   width: 100%;
   font-size: 1.5rem; }
 
+aside img {
+  width: 100%;
+  border-top-right-radius: 25px;
+  border-top-left-radius: 25px; }
+
 header img {
   width: 100%;
   height: 100%;
   border-bottom-right-radius: 25px;
-  border-bottom-left-radius: 25px; }
+  border-bottom-left-radius: 25px;
+  object-fit: cover; }
 
 main div div {
   text-align: center; }
