--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,8 @@
     grid-template-columns: repeat(4, 1fr);
     grid-template-areas: "nav nav nav nav" "header header header header" "main main main main" "footer footer footer footer"; }
     .contenedor__grid--galeria .w-100 {
-      height: 500px; }
+      height: 660px;
+      object-fit: cover; }
   .contenedor__grid--disco {
     grid-template-columns: repeat(3, 1fr);
     grid-template-areas: "nav nav nav" "header header header" "main main main" "footer footer footer footer"; } }
@@ -325,7 +326,7 @@ body {
   width: 100vw;
   height: 100%;
   background-size: cover;
-  background-color: black;
+  background-color: #050505FF;
   background-attachment: fixed; }
 
 p {
@@ -334,7 +335,7 @@ p {
   font-size: 1.5rem; }
 
 aside img {
-  width: 100%;
+  width: 25vw;
   border-top-right-radius: 25px;
   border-top-left-radius: 25px; }
 
