--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -179,7 +179,9 @@
 				"main main main main"
 				"footer footer footer footer";
 					.w-100 {
-			height: 500px;}
+				height: 660px;
+				object-fit: cover;
+}
 			}
 			
 		//discografia//
