--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,7 +18,7 @@ html {
 body {width: 100vw;
 	height: 100%; 
 background-size: cover;
-	background-color:black;
+	background-color:#050505FF;
 	background-attachment: fixed;
 }
 p {
@@ -27,7 +27,7 @@ p {
 	font-size: 1.5rem;
 }
 aside img {
-	width: 100%;
+	width: 25vw;
 	border-top-right-radius:25px;
 	border-top-left-radius:25px;
 }
