--- a/css/style.css
+++ b/css/style.css
@@ -84,9 +84,11 @@
     width: 100%;
     height: 100vh;
     grid-template-columns: repeat(1, 1fr);
-    grid-gap: 0px; }
+    grid-gap: 0px;
+    background-image: url("../img/ma.jpg"); }
     .contenedor__grid .caja__textomain {
-      width: 30vw; }
+      width: 30vw;
+      background-image: url("../img/ma.jpg"); }
   .contenedor__grid--disco {
     display: grid;
     width: 100%;
@@ -522,6 +524,8 @@ table {
   filter: brightness(170%); }
 
 .contenedor {
+  width: 100vw;
+  height: 100%;
   background-image: url("../img/pagina_404/space1.jpg");
   background-size: cover; }
   .contenedor .luna {
@@ -529,10 +533,9 @@ table {
     height: 550px; }
   .contenedor .error4 {
     background-color: rgba(40, 29, 123, 0.5);
-    color: red;
     margin-top: 8rem;
     font-family: 'Press Start 2P', cursive;
-    border-radius: 60px; }
+    border-radius: 14px; }
   .contenedor .texto404 {
     font-size: 3.5rem; }
   .contenedor .boton-404 {
