--- a/css/style.css
+++ b/css/style.css
@@ -9,15 +9,10 @@
     height: 100vh;
     grid-template-columns: repeat(1, 1fr);
     grid-gap: 0;
-    grid-template-rows: 7% 80% 10%;
-    background-image: url("../img/mi.jpg");
-    display: grid;
-    width: 100%;
-    height: 100vh;
-    grid-template-columns: repeat(1, 1fr);
-    grid-gap: 0;
-    grid-template-areas: "nav"  "main"  "footer";
+    grid-template-areas: "nav" "header" "main" "footer";
     /*	background-image: map-get($map: $paletadefondos,$key:'uno');*/ }
+    .contenedor__grid main {
+      background-image: url("../img/gig.webp"); }
     .contenedor__grid footer {
       display: flex;
       align-content: flex-end;
@@ -84,11 +79,9 @@
     width: 100%;
     height: 100vh;
     grid-template-columns: repeat(1, 1fr);
-    grid-gap: 0px;
-    background-image: url("../img/ma.jpg"); }
-    .contenedor__grid .caja__textomain {
-      width: 30vw;
-      background-image: url("../img/ma.jpg"); }
+    grid-gap: 0px; }
+    .contenedor__grid main {
+      background-image: url("../img/we.webp"); }
   .contenedor__grid--disco {
     display: grid;
     width: 100%;
@@ -332,9 +325,11 @@ body {
   background-attachment: fixed; }
 
 p {
-  font-weight: 600;
-  width: 100%;
-  font-size: 1.5rem; }
+  text-align: center;
+  color: #D9DBDE;
+  width: 70%;
+  font-size: 1.5rem;
+  font-weight: bold; }
 
 aside img {
   width: 25vw;
@@ -441,6 +436,9 @@ table {
 .text-left {
   text-align: left; }
 
+.text-right {
+  text-align: right; }
+
 .flex {
   display: flex;
   justify-content: space-around;
@@ -460,10 +458,11 @@ table {
 .flex_index {
   display: flex;
   justify-content: space-around;
-  align-items: flex-end;
-  align-content: flex-end;
+  align-items: center;
+  align-content: center;
   flex-direction: columns;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+  flex-direction: column; }
 
 #nav {
   grid-area: nav; }
@@ -563,22 +562,17 @@ table {
     -o-animation: moveX 3.05s linear 0s infinite alternate, moveY 3.4s linear 0s infinite alternate;
     animation: moveX 3.05s linear 0s infinite alternate, moveY 3.4s linear 0s infinite alternate; }
 
-.caja__textomain {
-  margin-left: 2rem;
-  width: 55vw;
-  box-shadow: 0 0 8px #30394f, 0 0 16px #30394f, 0 0 24px #30394f;
-  border-radius: 8px;
-  background-color: rgba(0, 0, 0, 0.6);
-  border-color: black;
-  border: solid; }
-
-.contenedor_contactos-fondo {
+.contenedor_contactos-fondo, .contenedor_index-fondo {
   margin: 1rem;
   padding: 1.5rem;
   background-color: rgba(48, 57, 79, 0.5);
   border-radius: 40px;
   border-color: #788199;
   box-shadow: 0 0 8px #30394f, 0 0 16px #30394f, 0 0 24px #30394f; }
+
+.contenedor_index-fondo {
+  background-color: rgba(0, 3, 4, 0.9);
+  width: 80%; }
 
 .contenedor__img--tour {
   width: 80%;
