--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -89,6 +89,10 @@
 		@include grid (grid,100%, 100vh, 1, 0px);	
 		main {
 			background-image: url("../img/we.webp");
+			p {
+			width: 95%;
+			font-size: 1.5rem;
+}
 
 		}
 		
