--- a/css/style.css
+++ b/css/style.css
@@ -574,7 +574,7 @@ table {
 
 .contenedor_index-fondo {
   background-color: rgba(0, 3, 4, 0.9);
-  width: 88%; }
+  width: 94%; }
 
 .contenedor__img--tour {
   width: 80%;
@@ -613,3 +613,17 @@ table {
 .w-100 {
   height: 300px;
   object-fit: cover; }
+
+.video-contenedor {
+  position: relative;
+  padding-bottom: 70%;
+  padding-top: 0px;
+  height: 0;
+  overflow: hidden; }
+
+.video-contenedor iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
