--- a/scss/main.scss
+++ b/scss/main.scss
@@ -306,7 +306,7 @@ header img{
 .contenedor_index-fondo{
 	@extend .contenedor_contactos-fondo;
 	background-color:rgba(0, 3, 4, .9);
-	width: 88%;
+	width: 94%;
 
 }
 //contenedor de imagen marilyn manson en tour//
@@ -354,4 +354,20 @@ header img{
 .w-100 {
 	height: 300px;
 	object-fit: cover;
+}
+
+.video-contenedor {
+    position: relative;
+    padding-bottom: 70%;
+    padding-top: 0px;
+    height: 0;
+    overflow: hidden;
+}
+ 
+.video-contenedor iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
