--- a/css/style.css
+++ b/css/style.css
@@ -244,6 +244,14 @@
   justify-content: center;
   z-index: 1;
   position: fixed; }
+  .navbar .nav-link {
+    font-size: 2rem;
+    padding-bottom: 2rem;
+    color: black;
+    font-size: bold;
+    font-weight: 400;
+    font-family: "Varela Round", sans-serif;
+    transition: transform .3s ease-in-out; }
   .navbar .navbar-toggler {
     background-color: #474747FF;
     border-color: black; }
@@ -528,13 +536,12 @@ table {
   width: 100vw;
   height: 100%;
   background-image: url("../img/pagina_404/space1.jpg");
-  background-size: cover; }
+  object-fit: cover; }
   .contenedor .luna {
     display: inline-block;
     height: 550px; }
   .contenedor .error4 {
     background-color: rgba(40, 29, 123, 0.5);
-    margin-top: 8rem;
     font-family: 'Press Start 2P', cursive;
     border-radius: 14px; }
   .contenedor .texto404 {
