--- a/scss/main.scss
+++ b/scss/main.scss
@@ -247,7 +247,7 @@ header img{
 	width: 100vw;
 	height: 100%;
 	background-image: url("../img/pagina_404/space1.jpg");
-	background-size:cover;
+	object-fit: cover;
 	.luna {
 		display: inline-block;
 		height: 550px;
@@ -255,7 +255,6 @@ header img{
 
 	.error4{
 		background-color: rgba(40,29, 123, .5);
-		margin-top: 8rem;
 		font-family: 'Press Start 2P', cursive;
 		border-radius:14px;
 	}
@@ -303,6 +302,7 @@ header img{
 	box-shadow: 0 0 8px rgba(48, 57, 79, 1.0), 
 	0 0 16px rgba(48, 57, 79, 1.0), 0 0 24px rgba(48, 57, 79, 1.0);
 }
+//contenedor index
 .contenedor_index-fondo{
 	@extend .contenedor_contactos-fondo;
 	background-color:rgba(0, 3, 4, .9);
@@ -351,11 +351,13 @@ header img{
 	border-radius : 10px;
 	padding:1rem;
 }
+//clase de imagenes misma altura en galeria//
 .w-100 {
 	height: 300px;
 	object-fit: cover;
 }
-
+/////////////////////////////
+//contenedor de video index//
 .video-contenedor {
     position: relative;
     padding-bottom: 70%;
@@ -371,3 +373,4 @@ header img{
     width: 100%;
     height: 100%;
 }
+///////////////////////
