--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -16,7 +16,7 @@ $letra__supergrande:3.5rem;
 //variables globales//
 $color__titulos: #0d6efd;
 $color__blanco:#D9DBDE;
-$color__negro:black;
+$color__negro:#0A0A0AFF;
 $color__nav_footer: rgba(48, 57, 79, .8);
 $color__azure:azure;
 //mapa de colores//
@@ -25,7 +25,7 @@ $paletadecolor:(
 	'dos':$color__blanco,
 	'tres':$color__nav_footer,
 	'cuatro':#A5C1CEFF,
-	'cinco':black,
+	'cinco':#0C0C0CFF,
 
 )
 
