--- a/css/style.css
+++ b/css/style.css
@@ -247,7 +247,7 @@
   .navbar .nav-link {
     font-size: 2rem;
     padding-bottom: 2rem;
-    color: black;
+    color: #0A0A0AFF;
     font-size: bold;
     font-weight: 400;
     font-family: "Varela Round", sans-serif;
@@ -287,7 +287,7 @@
 .nav-link {
   font-size: 2rem;
   padding-bottom: 2rem;
-  color: black;
+  color: #0A0A0AFF;
   font-size: bold;
   font-weight: 400;
   font-family: "Varela Round", sans-serif;
@@ -532,44 +532,64 @@ table {
   background-color: darkgreen;
   filter: brightness(170%); }
 
-.contenedor {
-  width: 100vw;
-  height: 100%;
-  background-image: url("../img/pagina_404/space1.jpg");
-  object-fit: cover; }
-  .contenedor .luna {
-    display: inline-block;
-    height: 550px; }
-  .contenedor .error4 {
-    background-color: rgba(40, 29, 123, 0.5);
-    font-family: 'Press Start 2P', cursive;
-    border-radius: 14px; }
-  .contenedor .texto404 {
-    font-size: 3.5rem; }
-  .contenedor .boton-404 {
-    background-color: darkblue;
-    color: white;
-    border-color: black;
-    border: solid; }
-  .contenedor .nave {
-    display: block;
-    width: 100px;
-    height: auto;
-    position: absolute;
-    -webkit-animation: moveX 2.05s linear 0s infinite alternate, moveY 1.4s linear 0s infinite alternate;
-    -moz-animation: moveX 2.05s linear 0s infinite alternate, moveY 1.4s linear 0s infinite alternate;
-    -o-animation: moveX 2.05s linear 0s infinite alternate, moveY 1.4s linear 0s infinite alternate;
-    animation: moveX 2.05s linear 0s infinite alternate, moveY 1.4s linear 0s infinite alternate; }
-  .contenedor .astro {
-    z-index: 1;
-    display: block;
-    width: 300px;
-    height: auto;
-    position: absolute;
-    -webkit-animation: moveX 3.05s linear 0s infinite alternate, moveY 3.4s linear 0s infinite alternate;
-    -moz-animation: moveX 3.05s linear 0s infinite alternate, moveY 3.4s linear 0s infinite alternate;
-    -o-animation: moveX 3.05s linear 0s infinite alternate, moveY 3.4s linear 0s infinite alternate;
-    animation: moveX 3.05s linear 0s infinite alternate, moveY 3.4s linear 0s infinite alternate; }
+/*.contenedor{
+	top: 50%;
+	position:absolute;
+	width: 100vw;
+	text-align: center;
+	.error4{
+		width: 50%;
+		background-color: rgba(40,29, 123, .5);
+		font-family: 'Press Start 2P', cursive;
+		border-radius:14px;
+	}
+
+	.texto404{
+		font-size: $letra__supergrande;
+	}
+	.boton-404{
+		background-color: darkblue;
+		color: white;
+		border-color: black;
+		border: solid;
+	}
+}*/
+.body404 {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: url("../img/gig.webp");
+  background-size: contain; }
+
+.container404 {
+  border-radius: 15px;
+  text-align: center;
+  width: 100%;
+  max-width: 500px;
+  padding: 20px;
+  background: rgba(48, 57, 79, 0.8); }
+
+h1 {
+  font-size: 10rem;
+  font-weight: 900;
+  margin: 0;
+  font-weight: 900;
+  letter-spacing: 20px;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text; }
+
+h2 {
+  font-size: 40px; }
+
+p {
+  font-size: 2rem; }
+
+.boton-404 {
+  background-color: #0F0F0FFF;
+  color: #D9DBDE;
+  border-color: #0A0A0AFF;
+  border: solid; }
 
 .contenedor_contactos-fondo, .contenedor_index-fondo {
   margin: 1rem;
@@ -586,9 +606,6 @@ table {
 .contenedor__img--tour {
   width: 80%;
   height: auto; }
-
-.ani {
-  animation: anima 8s infinite linear alternate; }
 
 .animacion__tour {
   position: relative; }
