--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,7 +17,7 @@ html {
 
 body {width: 100vw;
 	height: 100%; 
-background-size: cover;
+	background-size: cover;
 	background-color:#050505FF;
 	background-attachment: fixed;
 }
@@ -76,7 +76,12 @@ header img{
 	}
 
 	h1{
-		font-weight:500;
+		font-size: 3rem;
+		font-weight: 900;
+		margin: 0;
+		font-weight: 900;
+		letter-spacing: 10px;
+
 		background: linear-gradient(to right,white, #ECECE8, #5E5E5EFF,#5E5E5EFF,$color__blanco, white);
 		-webkit-background-clip:text;
 		background-clip:text;
@@ -125,27 +130,30 @@ header img{
 		
 		padding-left: 1rem;
 		margin-bottom: 3rem;
-	display: flex;
-	border:solid 2px rgba(255, 255, 255, .7);
-	color: $color__blanco;
-	align-items:center;
-	justify-content: center;
-				tr , th{
-					font-size: 1.8rem;
-					text-align: center;
-					padding-bottom: 1rem;
-				}
-				td{text-align: center;
-						font-size: 1.7rem;
-						padding:0.5rem;
-				}
-				}
+		display: flex;
+		border:solid 2px rgba(255, 255, 255, .7);
+		color: $color__blanco;
+		align-items:center;
+		justify-content: center;
+		tr , th{
+			font-size: 1.8rem;
+			text-align: center;
+			padding-bottom: 1rem;
+		}
+		td{text-align: center;
+			font-size: 1.7rem;
+			padding:0.5rem;
+		}
+	}
 	
+	#cuatro{
+		font-size: 14rem;
+	}
 
 
 
 
-					
+
 	.text-left{
 		text-align: left;
 	}
@@ -265,7 +273,7 @@ header img{
 		border-color: black;
 		border: solid;
 	}
-}*/
+	}*/
 // fin de pagina 404///()
 .body404{
 	height: 100vh;
@@ -273,35 +281,26 @@ header img{
 	align-items:center;
 	justify-content: center;
 	background-image: url("../img/gig.webp") ;
-background-size: contain;}
-.container404{
-	border-radius: 15px;
-	text-align: center;
-width: 100%;
-max-width: 500px;
-padding:20px;
-background:$color__nav_footer}
-	h1{
-	font-size: 10rem;
-	font-weight: 900;
-	margin: 0;
-	font-weight: 900;
-	letter-spacing: 20px;
-	-webkit-text-fill-color: transparent;
-	-webkit-background-clip: text;
-	}
-	h2{
-		font-size: 40px;
-	}
-	p{
-		font-size: 2rem;
-	}
-.boton-404{
-		background-color: #0F0F0FFF;
-		color: $color__blanco;
-		border-color: $color__negro;
-		border: solid;
-	}
+	background-size: contain;}
+	.container404{
+		border-radius: 15px;
+		text-align: center;
+		width: 100%;
+		max-width: 500px;
+		padding:20px;
+		background:$color__nav_footer}
+		h2{
+			font-size: 40px;
+		}
+		p{
+			font-size: 2rem;
+		}
+		.boton-404{
+			background-color: #0F0F0FFF;
+			color: $color__blanco;
+			border-color: $color__negro;
+			border: solid;
+		}
 //caja de formulario en contactos//
 .contenedor_contactos-fondo{
 	margin:1rem;
@@ -367,18 +366,18 @@ background:$color__nav_footer}
 /////////////////////////////
 //contenedor de video index//
 .video-contenedor {
-    position: relative;
-    padding-bottom: 70%;
-    padding-top: 0px;
-    height: 0;
-    overflow: hidden;
+	position: relative;
+	padding-bottom: 70%;
+	padding-top: 0px;
+	height: 0;
+	overflow: hidden;
 }
- 
+
 .video-contenedor iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 ///////////////////////
