--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,7 @@
     height: 100vh;
     grid-template-columns: repeat(1, 1fr);
     grid-gap: 0;
-    grid-template-areas: "nav" "header" "main" "footer";
-    /*	background-image: map-get($map: $paletadefondos,$key:'uno');*/ }
+    grid-template-areas: "nav" "header" "main" "footer"; }
     .contenedor__grid main {
       background-image: url("../img/gig.webp"); }
     .contenedor__grid footer {
@@ -29,8 +28,7 @@
     height: 100vh;
     grid-template-columns: repeat(1, 1fr);
     grid-gap: 0;
-    grid-template-areas: "nav" "header" "main" "footer";
-    /*background-image: map-get($map: $paletadefondos,$key:'dos');*/ }
+    grid-template-areas: "nav" "header" "main" "footer"; }
   .contenedor__grid--galeria {
     display: grid;
     width: 100%;
@@ -105,7 +103,8 @@
     height: 100vh;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 7px;
-    grid-template-areas: "nav nav nav nav" "header header header header" "main main main main" "footer footer footer footer"; }
+    grid-template-areas: "nav nav nav nav" "header header header header" "main main main main" "footer footer footer footer";
+    object-fit: cover; }
     .contenedor__grid--galeria .w-100 {
       height: 400px; }
   .contenedor__grid--tour {
@@ -284,15 +283,6 @@
           height: 2vh;
           color: white; }
 
-.nav-link {
-  font-size: 2rem;
-  padding-bottom: 2rem;
-  color: #0A0A0AFF;
-  font-size: bold;
-  font-weight: 400;
-  font-family: "Varela Round", sans-serif;
-  transition: transform .3s ease-in-out; }
-
 footer {
   display: flex;
   justify-content: space-evenly;
@@ -349,6 +339,7 @@ aside img {
 header img {
   width: 100%;
   height: 100%;
+  padding: 2rem;
   border-bottom-right-radius: 25px;
   border-bottom-left-radius: 25px;
   object-fit: cover; }
@@ -500,7 +491,7 @@ table {
   grid-area: aside; }
 
 .carousel {
-  margin: 4rem; }
+  margin: 3rem; }
 
 .boton-escuchar {
   color: #D9DBDE;
@@ -541,50 +532,6 @@ table {
 .boton__enviar:hover {
   background-color: darkgreen;
   filter: brightness(170%); }
-
-/*.contenedor{
-	top: 50%;
-	position:absolute;
-	width: 100vw;
-	text-align: center;
-	.error4{
-		width: 50%;
-		background-color: rgba(40,29, 123, .5);
-		font-family: 'Press Start 2P', cursive;
-		border-radius:14px;
-	}
-
-	.texto404{
-		font-size: $letra__supergrande;
-	}
-	.boton-404{
-		background-color: darkblue;
-		color: white;
-		border-color: black;
-		border: solid;
-	}
-	}*/
-.body404 {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-image: url("../img/gig.webp");
-  background-size: contain; }
-
-.container404 {
-  border-radius: 15px;
-  text-align: center;
-  width: 100%;
-  max-width: 500px;
-  padding: 20px;
-  background: rgba(48, 57, 79, 0.8); }
-
-.boton-404 {
-  background-color: #0F0F0FFF;
-  color: #D9DBDE;
-  border-color: #0A0A0AFF;
-  border: solid; }
 
 .contenedor_contactos-fondo, .contenedor_index-fondo {
   margin: 1rem;
@@ -639,10 +586,9 @@ table {
   padding-top: 0px;
   height: 0;
   overflow: hidden; }
-
-.video-contenedor iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%; }
+  .video-contenedor iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
