--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -13,7 +13,7 @@ $letra__media:1.5rem;
 $letra__semigrande:1.8rem;
 $letra__grande:2rem;
 $letra__supergrande:3.5rem;
-//variables globales//
+//variables globales color//
 $color__titulos: #0d6efd;
 $color__blanco:#D9DBDE;
 $color__negro:#0A0A0AFF;
