--- a/scss/main.scss
+++ b/scss/main.scss
@@ -324,4 +324,68 @@ header img{
 
 }
 
+* {
+    padding: 0;
+    margin: 0;
+}
+
+html,body {
+    height: 100%;
+}
+
+#body404 {
+    background: rgba(6, 6, 6, 0.9);
+    display: flex;
+    justify-content: center; 
+    align-items: center;    
+}
+ 
+.main-container {
+    width: 80%;
+    max-width: 1000px;
+    max-height: 500px;
+    min-width: 400px;
+    background-color: $color__blanco;
+    font-size: 0;
+    border-radius: 20px;
+    box-shadow: 0 0 50px 0 rgba(146, 146, 146, 0.63);
+}
+.main-container .container-item {
+    display: inline-block;
+    vertical-align: middle;
+    width: 50%;
+}
+
+.main-container .img-container {
+    background-color: rgba(253, 216, 168, 0.692);
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+
+.main-container .text-container .code {
+    font-size: clamp(100px,20vw,150px);
+    font-family: 'Arial Narrow';
+    color: rgb(86, 86, 253);
+    font-weight: bolder;
+    text-align: center;
+}
+
+.main-container .text-container .msg {
+    font-size: 18px;
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.main-container .text-container .action {
+    color: #0f0f0f;
+    font-size: 15px;
+    font-weight: 600;
+    text-align: center;
+    text-decoration-line: none;
+}
+.main-container .text-container a:hover{
+    color: #5bc0de;
+}
+
 ///////////////////////
