--- a/css/style.css
+++ b/css/style.css
@@ -607,28 +607,18 @@ html, body {
 
 .main-container {
   width: 80%;
-  max-width: 1000px;
-  max-height: 500px;
-  min-width: 400px;
   background-color: #D9DBDE;
-  font-size: 0;
   border-radius: 20px;
   box-shadow: 0 0 50px 0 rgba(146, 146, 146, 0.63); }
 
-.main-container .container-item {
-  display: inline-block;
-  vertical-align: middle;
-  width: 50%; }
-
 .main-container .img-container {
-  background-color: rgba(253, 216, 168, 0.692);
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px; }
+  background-color: rgba(5, 5, 5, 0.692);
+  border-radius: 20px; }
 
 .main-container .text-container .code {
   font-size: clamp(100px, 20vw, 150px);
   font-family: 'Arial Narrow';
-  color: #5656fd;
+  color: darkred;
   font-weight: bolder;
   text-align: center; }
 
@@ -639,11 +629,12 @@ html, body {
   margin-bottom: 20px; }
 
 .main-container .text-container .action {
-  color: #0f0f0f;
+  color: darkred;
   font-size: 15px;
-  font-weight: 600;
+  font-weight: 800;
   text-align: center;
-  text-decoration-line: none; }
+  text-decoration-line: none;
+  padding-bottom: 4rem; }
 
 .main-container .text-container a:hover {
   color: #5bc0de; }
